--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Description: In Luxembourg the waste water treatment plant samples are used to
               monitor for epidemic disease such as RSV, Influenye, SARS CoV2 etc.
               This package takes the raw data files from qPCR and ddPCR tests and 
               prepares them for the microbs.lu i.e. Luxembourgish national dashboard.
-License: `use_ccby_license()`
+License: use_apache_license()
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
@@ -23,5 +23,8 @@ Imports:
     tidyr,
     usethis
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+VignetteBuilder: knitr
