--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,9 @@
 
 export(archive_microbs_raw_ddPCR_Data)
 export(archive_microbs_raw_qPCR_Data)
+export(check_microbs_raw_ddPCR_Data)
 export(get_microbs_calc_DataPath)
+export(get_microbs_check_DataPath)
 export(get_microbs_connector_dir)
 export(get_microbs_created_DataPath)
 export(get_microbs_dashboard_DataPath)
@@ -19,6 +21,7 @@ export(load_microbs_old_raw_qPCR_Data)
 export(load_microbs_raw_ddPCR_Data)
 export(load_microbs_raw_qPCR_Data)
 export(set_microbs_calc_DataPath)
+export(set_microbs_check_DataPath)
 export(set_microbs_connector_dir)
 export(set_microbs_created_DataPath)
 export(set_microbs_dashboard_DataPath)
