--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(get_microbs_connector_dir)
 export(get_microbs_created_DataPath)
 export(get_microbs_dashboard_DataPath)
 export(get_microbs_ddPCR_rawDataPath)
+export(get_microbs_flux_Data)
 export(get_microbs_flux_DataPath)
 export(get_microbs_loaded_DataPath)
 export(get_microbs_new_raw_ddPCR_Data)
