name space update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(get_microbs_new_raw_ddPCR_Data)
 export(get_microbs_old_calc_ddPCR_Data)
 export(get_microbs_old_calc_qPCR_Data)
 export(get_microbs_old_check_ddPCR_Data)
+export(get_microbs_old_check_qPCR_Data)
 export(get_microbs_old_raw_ddPCR_Data)
 export(get_microbs_old_raw_qPCR_Data)
 export(get_microbs_qPCR_rawDataPath)
