--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(archive_microbs_loaded_qPCR_Data)
 export(archive_microbs_raw_ddPCR_Data)
 export(archive_microbs_raw_qPCR_Data)
 export(calculations_microbs_ddPCR)
+export(calculations_microbs_qPCR)
 export(check_microbs_raw_ddPCR_Data)
 export(check_microbs_raw_qPCR_Data)
 export(get_microbs_calc_DataPath)
@@ -21,6 +22,7 @@ export(get_microbs_flux_Data)
 export(get_microbs_flux_DataPath)
 export(get_microbs_loaded_DataPath)
 export(get_microbs_new_raw_ddPCR_Data)
+export(get_microbs_new_raw_qPCR_Data)
 export(get_microbs_old_calc_ddPCR_Data)
 export(get_microbs_old_calc_qPCR_Data)
 export(get_microbs_old_check_ddPCR_Data)
