--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ export(calculations_microbs_ddPCR)
 export(calculations_microbs_qPCR)
 export(check_microbs_raw_ddPCR_Data)
 export(check_microbs_raw_qPCR_Data)
+export(create_microbs_flu_file)
+export(create_microbs_rsv_file)
 export(get_microbs_calc_DataPath)
 export(get_microbs_check_DataPath)
 export(get_microbs_connector_dir)
@@ -21,6 +23,12 @@ export(get_microbs_ddPCR_rawDataPath)
 export(get_microbs_flux_Data)
 export(get_microbs_flux_DataPath)
 export(get_microbs_loaded_DataPath)
+export(get_microbs_new_calc_ddPCR_Data)
+export(get_microbs_new_calc_qPCR_Data)
+export(get_microbs_new_create_flu_sheet1)
+export(get_microbs_new_create_flu_sheet2)
+export(get_microbs_new_create_flu_sheet3)
+export(get_microbs_new_create_flu_sheet4)
 export(get_microbs_new_raw_ddPCR_Data)
 export(get_microbs_new_raw_qPCR_Data)
 export(get_microbs_old_calc_ddPCR_Data)
@@ -53,5 +61,6 @@ export(set_microbs_loaded_DataPath)
 export(set_microbs_qPCR_rawDataPath)
 export(set_microbs_stdCurve_DataPath)
 export(set_microbs_wdirectory)
+export(utils_extract_WWTP)
 export(utils_microbs_path_builder)
 import(magrittr)
