updates for new funcitons

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(archive_microbs_calc_ddPCR_Data)
 export(archive_microbs_calc_qPCR_Data)
 export(archive_microbs_check_ddPCR_Data)
 export(archive_microbs_check_qPCR_Data)
+export(archive_microbs_created_flu_Data)
+export(archive_microbs_created_rsv_Data)
 export(archive_microbs_loaded_ddPCR_Data)
 export(archive_microbs_loaded_qPCR_Data)
 export(archive_microbs_raw_ddPCR_Data)
@@ -14,6 +16,7 @@ export(check_microbs_raw_ddPCR_Data)
 export(check_microbs_raw_qPCR_Data)
 export(create_microbs_flu_file)
 export(create_microbs_rsv_file)
+export(create_microbs_sars_file)
 export(get_microbs_calc_DataPath)
 export(get_microbs_check_DataPath)
 export(get_microbs_connector_dir)
