for CRAN checklist

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,14 @@ export(get_microbs_new_create_flu_sheet1)
 export(get_microbs_new_create_flu_sheet2)
 export(get_microbs_new_create_flu_sheet3)
 export(get_microbs_new_create_flu_sheet4)
+export(get_microbs_new_create_hRSV_sheet1)
+export(get_microbs_new_create_hRSV_sheet2)
+export(get_microbs_new_create_hRSV_sheet3)
+export(get_microbs_new_create_hRSV_sheet4)
+export(get_microbs_new_create_sars_sheet1)
+export(get_microbs_new_create_sars_sheet2)
+export(get_microbs_new_create_sars_sheet3)
+export(get_microbs_new_create_sars_sheet4)
 export(get_microbs_new_raw_ddPCR_Data)
 export(get_microbs_new_raw_qPCR_Data)
 export(get_microbs_old_calc_ddPCR_Data)
