--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.0.2.0000
 Authors@R: 
     person("Prasad", "ADHAV", , "prasad.adhav@list.lu", role = c("aut", "cre"))
 Description: In Luxembourg the waste water treatment plant samples are used to 
-              monitor for epidemic disease such as RSV, Influenye, SARS CoV2 etc.
+              monitor for epidemic disease such as RSV, Influenza, SARS CoV2 etc.
               This package takes the raw data files from qPCR and ddPCR tests and 
               prepares them for the microbs.lu i.e. Luxembourgish national dashboard.
 License: usethis::use_apache_license("Prasad ADHAV")
