--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,12 @@ Package: microbs.lu
 Title: Process PCR datafiles for the microbs.lu dashboard
 Version: 0.0.2.0000
 Authors@R: 
-    person("Prasad", "ADHAV", , "prasad.adhav@list.lu", role = c("aut", "cre"))
+    person("Prasad", "ADHAV", , "prasad.adhav@list.lu", role = c("aut", "cre", "cph"))
 Description: In Luxembourg the waste water treatment plant samples are used to 
               monitor for epidemic disease such as RSV, Influenza, SARS CoV2 etc.
               This package takes the raw data files from qPCR and ddPCR tests and 
               prepares them for the microbs.lu i.e. Luxembourgish national dashboard.
-License: usethis::use_apache_license("Prasad ADHAV")
+License: file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
