--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(check_microbs_raw_qPCR_Data)
 export(create_microbs_flu_file)
 export(create_microbs_rsv_file)
 export(create_microbs_sars_file)
+export(dashboard_microbs_hRSV_export)
 export(get_microbs_calc_DataPath)
 export(get_microbs_check_DataPath)
 export(get_microbs_connector_dir)
@@ -40,12 +41,18 @@ export(get_microbs_new_create_sars_sheet1)
 export(get_microbs_new_create_sars_sheet2)
 export(get_microbs_new_create_sars_sheet3)
 export(get_microbs_new_create_sars_sheet4)
+export(get_microbs_new_dashboard_flu_Data)
+export(get_microbs_new_dashboard_hRSV_Data)
+export(get_microbs_new_dashboard_sars_Data)
 export(get_microbs_new_raw_ddPCR_Data)
 export(get_microbs_new_raw_qPCR_Data)
 export(get_microbs_old_calc_ddPCR_Data)
 export(get_microbs_old_calc_qPCR_Data)
 export(get_microbs_old_check_ddPCR_Data)
 export(get_microbs_old_check_qPCR_Data)
+export(get_microbs_old_dashboard_flu_Data)
+export(get_microbs_old_dashboard_hRSV_Data)
+export(get_microbs_old_dashboard_sars_Data)
 export(get_microbs_old_raw_ddPCR_Data)
 export(get_microbs_old_raw_qPCR_Data)
 export(get_microbs_qPCR_rawDataPath)
@@ -56,6 +63,9 @@ export(load_microbs_old_calc_ddPCR_Data)
 export(load_microbs_old_calc_qPCR_Data)
 export(load_microbs_old_check_ddPCR_Data)
 export(load_microbs_old_check_qPCR_Data)
+export(load_microbs_old_dashboard_flu_Data)
+export(load_microbs_old_dashboard_hRSV_Data)
+export(load_microbs_old_dashboard_sars_Data)
 export(load_microbs_old_raw_ddPCR_Data)
 export(load_microbs_old_raw_qPCR_Data)
 export(load_microbs_raw_ddPCR_Data)
