--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(check_microbs_raw_qPCR_Data)
 export(create_microbs_flu_file)
 export(create_microbs_rsv_file)
 export(create_microbs_sars_file)
+export(dashboard_microbs_SARS_CoV_export)
 export(dashboard_microbs_hRSV_export)
 export(get_microbs_calc_DataPath)
 export(get_microbs_check_DataPath)
