--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(create_microbs_flu_file)
 export(create_microbs_rsv_file)
 export(create_microbs_sars_file)
 export(dashboard_microbs_SARS_CoV_export)
+export(dashboard_microbs_flu_export)
 export(dashboard_microbs_hRSV_export)
 export(get_microbs_calc_DataPath)
 export(get_microbs_check_DataPath)
